--- a/invitation.html
+++ b/invitation.html
@@ -23,29 +23,22 @@
             font-family: 'Cormorant Garamond', serif;
             color: var(--text-dark);
             scroll-behavior: smooth;
-            overflow-x: hidden;
         }
 
-        /* --- ÉLÉMENTS FLORAUX BIEN VISIBLES --- */
-        .bg-flower-left {
+        /* --- FOND EN CONTINU --- */
+        .background-pattern {
             position: fixed;
-            top: 5%;
-            left: -30px;
-            width: clamp(150px, 25vw, 300px);
-            opacity: 0.8; /* Opacité augmentée pour bien les voir */
-            z-index: 1; /* Devant le fond blanc */
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            /* L'image se répète sur toute la page */
+            background-image: url('continue.JPG');
+            background-repeat: repeat;
+            background-size: 250px; /* Taille du motif, ajustable */
+            opacity: 0.12; /* Très léger pour le luxe et la lisibilité */
+            z-index: -1;
             pointer-events: none;
-        }
-
-        .bg-flower-right {
-            position: fixed;
-            bottom: 5%;
-            right: -30px;
-            width: clamp(180px, 30vw, 350px);
-            opacity: 0.8; /* Opacité augmentée */
-            z-index: 1;
-            pointer-events: none;
-            transform: rotate(-10deg);
         }
 
         /* Barre de Navigation */
@@ -83,8 +76,6 @@
 
         /* Conteneur */
         .page-wrapper {
-            position: relative;
-            z-index: 10; /* Pour passer devant les fleurs si besoin */
             box-sizing: border-box;
             padding: 100px 15px 60px 15px;
             display: flex;
@@ -119,30 +110,32 @@
             padding: 8px;
             background: white;
             box-shadow: 0 8px 20px rgba(0,0,0,0.03);
+            box-sizing: border-box;
         }
 
-        /* --- CARDS AVEC BORDURES NETTES SUR MOBILE --- */
+        /* Cards avec Bordures Bien Visibles */
         .event-card {
             background: white;
-            border: 2px solid var(--rose-prestige); /* Bordure bien visible */
-            padding: clamp(20px, 5vw, 40px);
+            border: 2px solid var(--rose-prestige);
+            padding: clamp(25px, 5vw, 45px);
             margin: 20px 0;
             width: 100%;
-            max-width: 500px;
+            max-width: 520px;
             position: relative;
             overflow: hidden;
+            box-sizing: border-box;
+            /* Image droite.JPG toujours en bas à droite de la card */
             background-image: url('droite.JPG');
             background-repeat: no-repeat;
             background-position: bottom right;
-            background-size: clamp(80px, 18vw, 140px);
-            box-sizing: border-box;
+            background-size: clamp(90px, 18vw, 150px);
         }
 
         .event-card::before {
             content: '';
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(255, 255, 255, 0.85); /* Fond de carte blanc pour lire le texte */
+            background: rgba(255, 255, 255, 0.88);
             z-index: 0;
         }
 
@@ -176,18 +169,19 @@
             text-transform: uppercase;
             letter-spacing: 3px;
             cursor: pointer;
+            font-weight: 600;
         }
 
         @media (max-width: 480px) {
-            .bg-flower-left, .bg-flower-right { opacity: 0.6; } /* Un peu moins sur petit mobile pour pas gêner */
-            .event-card { width: 100%; margin: 15px 0; }
+            .background-pattern { background-size: 180px; } /* Motif plus petit sur mobile */
+            .navbar { height: 60px; }
+            .event-card { width: 100%; }
         }
     </style>
 </head>
 <body>
 
-<img src="doublefleur.JPG" class="bg-flower-left">
-<img src="fleur.JPG" class="bg-flower-right">
+<div class="background-pattern"></div>
 
 <nav class="navbar">
     <ul class="nav-links">
@@ -203,34 +197,40 @@
         <img src="logo.JPG" alt="Logo" class="wedding-logo">
         <h1 class="names">Eva & Samuel</h1>
 
-        <img src="nez.JPG" alt="Photo" class="hero-photo">
+        <img src="nez.JPG" alt="Photo Principale" class="hero-photo">
 
-        <div style="max-width: 550px; font-size: 1.3rem; font-style: italic; margin: 20px 0 40px 0;">
-            "C’est avec une joie immense que nous vous invitons à célébrer notre union. Nous avons hâte de partager ce moment unique avec vous."
+        <div style="max-width: 550px; font-size: 1.35rem; font-style: italic; margin: 20px 0 45px 0; line-height: 1.6;">
+            "C’est avec un bonheur immense que nous vous convions à célébrer notre union. Nous avons hâte de vivre ce moment inoubliable entourés de ceux que nous aimons."
         </div>
 
         <div class="event-card" id="mairie">
-            <div style="letter-spacing: 2px; text-transform: uppercase; font-size: 0.85rem; margin-bottom: 10px; color: var(--text-gray);">La Mairie</div>
-            <div style="font-size: 1.4rem; font-style: italic; margin-bottom: 8px;">11 Mai 2026 à 14h30</div>
-            <p style="margin: 0;">Mairie du 16ème, Paris.</p>
+            <div style="letter-spacing: 3px; text-transform: uppercase; font-size: 0.85rem; margin-bottom: 10px; color: var(--text-gray);">La Mairie</div>
+            <div style="font-size: 1.5rem; font-style: italic; margin-bottom: 10px;">11 Mai 2026 à 14h30</div>
+            <p style="margin: 0; font-size: 1.1rem;">Mairie du 16ème arrondissement, Paris.</p>
         </div>
 
         <div class="event-card" id="houppa">
-            <div style="letter-spacing: 2px; text-transform: uppercase; font-size: 0.85rem; margin-bottom: 10px; color: var(--text-gray);">La Houppa</div>
-            <div style="font-size: 1.4rem; font-style: italic; margin-bottom: 8px;">12 Mai 2026 à 17h00</div>
-            <p style="margin: 0;">Célébration de notre union.</p>
+            <div style="letter-spacing: 3px; text-transform: uppercase; font-size: 0.85rem; margin-bottom: 10px; color: var(--text-gray);">La Houppa</div>
+            <div style="font-size: 1.5rem; font-style: italic; margin-bottom: 10px;">12 Mai 2026 à 17h00</div>
+            <p style="margin: 0; font-size: 1.1rem;">Nous serions honorés de célébrer notre union religieuse avec vous.</p>
         </div>
 
-        <img src="verre.JPG" alt="Verre" class="section-photo">
+        <img src="verre.JPG" alt="Célébration" class="section-photo">
 
         <div class="form-container" id="rsvp">
-            <h2 style="text-align: center; letter-spacing: 2px; text-transform: uppercase; font-size: 1rem; margin-bottom: 25px;">Confirmer ma présence</h2>
+            <h2 style="text-align: center; letter-spacing: 3px; text-transform: uppercase; font-size: 1.1rem; margin-bottom: 30px;">Confirmer ma présence</h2>
             <form>
-                <input type="text" placeholder="Nom & Prénom" required>
-                <select required>
-                    <option value="oui">Oui, avec plaisir</option>
-                    <option value="non">Non, avec regret</option>
-                </select>
+                <div style="margin-bottom: 15px;">
+                    <label style="display:block; font-size:0.75rem; letter-spacing:2px; margin-bottom:5px;">NOM & PRÉNOM</label>
+                    <input type="text" placeholder="Votre nom complet" required>
+                </div>
+                <div style="margin-bottom: 15px;">
+                    <label style="display:block; font-size:0.75rem; letter-spacing:2px; margin-bottom:5px;">SEREZ-VOUS PRÉSENT ?</label>
+                    <select required>
+                        <option value="oui">Oui, avec plaisir</option>
+                        <option value="non">Non, avec regret</option>
+                    </select>
+                </div>
                 <button type="submit" class="btn-rsvp">Envoyer ma réponse</button>
             </form>
         </div>
