--- a/invitation.html
+++ b/invitation.html
@@ -8,6 +8,7 @@
     <style>
         :root {
             --rose-prestige: #d4a5a5;
+            --rose-clair: #e1b4b4;
             --white-cream: #fffdf9;
             --text-gray: #5a5a5a;
             --text-dark: #333333;
@@ -37,43 +38,36 @@
         .date-line { font-weight: 700; text-transform: uppercase; letter-spacing: 1px; color: var(--text-dark); }
         .venue-name { font-size: 1.4rem; font-weight: 700; color: var(--rose-prestige); margin-top: 5px; display: block; }
         .address-text { font-style: italic; font-size: 1rem; color: var(--text-gray); }
-        .highlight-text { font-size: 0.95rem; color: var(--rose-prestige); font-style: italic; margin-top: 10px; display: block; }
 
         .event-card { background-color: rgba(255, 255, 255, 0.95); border: 1px solid var(--line-color); padding: 30px 15px; margin: 20px 0; width: 100%; position: relative; }
 
         .action-btns { display: flex; justify-content: center; gap: 10px; margin-top: 15px; flex-wrap: wrap; }
-        .btn-mini { 
-            text-decoration: none; font-family: 'Montserrat', sans-serif; font-size: 0.65rem; 
-            text-transform: uppercase; letter-spacing: 1px; color: var(--rose-prestige); 
+        .btn-mini {
+            text-decoration: none; font-family: 'Montserrat', sans-serif; font-size: 0.65rem;
+            text-transform: uppercase; letter-spacing: 1px; color: var(--rose-prestige);
             border: 1px solid var(--rose-prestige); padding: 8px 12px; border-radius: 4px; transition: 0.3s;
             cursor: pointer; background: transparent;
         }
         .btn-mini:hover { background: var(--rose-prestige); color: white; }
 
-        /* --- IMAGES DÉCORATIVES --- */
-        .illust-voiture { width: 180px; height: auto; margin: 15px auto; display: block; } 
-        .illust-bagues { width: 150px; height: auto; margin: 15px auto; display: block; } 
-
+        .illust-voiture { width: 180px; height: auto; margin: 15px auto; display: block; }
+        .illust-bagues { width: 150px; height: auto; margin: 15px auto; display: block; }
         .hebreu-img { width: 100%; max-width: 400px; margin: 0 auto 20px; display: block; filter: sepia(0.2); }
 
         .family-grid { display: flex; justify-content: space-between; gap: 10px; margin-bottom: 25px; text-align: center; border-bottom: 1px solid var(--line-color); padding-bottom: 20px; }
         .family-col { flex: 1; min-width: 0; }
         .family-col h3 { font-family: 'Great Vibes', cursive; color: var(--rose-prestige); font-size: 1.4rem; margin-bottom: 15px; font-weight: normal; }
-        .family-col p { font-size: 0.85rem; margin: 5px 0; color: var(--text-dark); line-height: 1.3; word-wrap: break-word; font-weight: 400; }
-        .family-spacer { margin-bottom: 15px; display: block; }
+        .family-col p { font-size: 0.85rem; margin: 5px 0; color: var(--text-dark); line-height: 1.3; font-weight: 400; }
 
         .memorial-card {
             background-color: rgba(255, 255, 255, 0.8);
-            border-radius: 4px;
-            padding: 40px 25px;
-            margin: 30px auto 10px;
-            max-width: 90%;
+            border-radius: 4px; padding: 40px 25px; margin: 30px auto 10px; max-width: 90%;
             box-shadow: 0 4px 15px rgba(0,0,0,0.05);
         }
-        .memorial-card p { font-family: 'Cormorant Garamond', serif; font-size: 1.15rem; line-height: 1.6; color: var(--text-dark); font-style: italic; margin: 0; }
+        .memorial-card p { font-size: 1.15rem; line-height: 1.6; color: var(--text-dark); font-style: italic; margin: 0; }
 
         .wedding-card { background: white; padding: 25px 20px; margin-top: 30px; border: 1px solid var(--line-color); text-align: left; }
-        .btn-action { background: var(--text-dark); color: white; border: none; padding: 16px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
+        .btn-action { background: var(--text-dark); color: white; border: none; padding: 18px; width: 100%; text-transform: uppercase; font-weight: 700; cursor: pointer; letter-spacing: 2px; font-family: 'Montserrat', sans-serif; transition: 0.3s; }
         .btn-action:hover { background: var(--rose-prestige); }
     </style>
 </head>
@@ -93,123 +87,89 @@
 <div class="page-wrapper" id="accueil">
     <div class="main-frame">
         <img src="logoES.png" alt="Logo" style="width: 70px;">
-
         <img src="nez.JPG" alt="Eva & Samuel" class="hero-photo">
 
         <div class="event-card" id="mairie">
             <h2 class="section-title">Cérémonie Civile</h2>
             <div class="names-inline">Eva & Samuel</div>
-            
             <img src="voiture.png" alt="Voiture" class="illust-voiture">
-
             <span class="sub-text">Se diront « oui »</span>
-
             <div class="date-block">
                 <span class="date-line">Mercredi 6 Mai 2026</span><br>
                 <span>à 14h30 précises</span>
             </div>
-
             <div class="info-block">
                 <span class="venue-name">Mairie de Sarcelles</span>
                 <span class="address-text">3 rue de la Résistance, 95200 Sarcelles</span>
-
                 <div class="action-btns">
-                    <a href="https://waze.com/ul?q=Mairie+de+Sarcelles+3+rue+de+la+resistance+95200+Sarcelles" target="_blank" class="btn-mini">Itinéraire Waze</a>
+                    <a href="https://waze.com/ul?q=Mairie+de+Sarcelles" target="_blank" class="btn-mini">Itinéraire Waze</a>
                     <button onclick="handleCalendar('Mairie', '20260506T143000', '20260506T160000', 'Mairie de Sarcelles')" class="btn-mini">Ajouter au calendrier</button>
-                </div>
-
-                <span class="highlight-text">Un vin d'honneur suivra la cérémonie au :</span>
-                <span class="venue-name" style="font-size: 1.2rem;">Centre Bérechit</span>
-                <span class="address-text">74 Avenue Paul Valéry, 95200 Sarcelles</span>
-
-                <div class="action-btns">
-                    <a href="https://waze.com/ul?q=Centre+Berechit+74+Avenue+Paul+Valery+95200+Sarcelles" target="_blank" class="btn-mini">Itinéraire Waze</a>
                 </div>
             </div>
         </div>
 
         <div class="event-card" id="houppa">
             <img src="hebreu.png" alt="Bénédiction" class="hebreu-img">
-
             <img src="baguess.png" alt="Alliances" class="illust-bagues">
-
             <div class="family-grid">
                 <div class="family-col">
                     <h3>Famille de la Kala</h3>
-                    <p>Madame Jacqueline Levy</p>
-                    <p>Madame Huguette Soulat</p>
-                    <div class="family-spacer"></div>
-                    <p>Monsieur et Madame<br>Stéphane Levy</p>
+                    <p>Jacqueline Levy</p>
+                    <p>Huguette Soulat</p>
+                    <p><br>Cecilia & Stéphane Levy</p>
                 </div>
-
                 <div class="family-col">
                     <h3>Famille du Hatan</h3>
-                    <p>Madame Simone Msika</p>
-                    <div class="family-spacer" style="margin-bottom: 32px;"></div>
-                    <p>Monsieur et Madame<br>Georges Uzan</p>
+                    <p>Simone Msika</p>
+                    <p><br>Corinne & Georges Uzan</p>
                 </div>
             </div>
-
-            <div class="names-inline">Eva & Samuel</div>
-            <div class="names-hebrew">הוה & שמואל</div>
-
-            <p style="margin-bottom: 20px; font-style: italic; font-size: 1rem;">
+            <p style="margin: 20px 0; font-style: italic; font-size: 1.1rem; color: var(--text-dark);">
                 Ont l’immense joie de vous faire part de la Houppa de leurs enfants et petits-enfants
             </p>
-
-            <div class="date-block">
+            <div class="names-inline">Eva & Samuel</div>
+            <div class="names-hebrew">הוה & שמואל</div>
+            <div class="date-block" style="margin-top: 25px;">
                 <span class="date-line">Mardi 12 Mai 2026</span><br>
                 <span>à 17h30</span>
             </div>
-
             <div class="info-block">
                 <span class="venue-name">Le White</span>
                 <span class="address-text">68 rue Louis Ampère, 93330 Neuilly sur Marne</span>
-
                 <div class="action-btns">
-                    <a href="https://waze.com/ul?q=Le+White+68+rue+Louis+Ampere+93330+Neuilly+sur+Marne" target="_blank" class="btn-mini">Itinéraire Waze</a>
+                    <a href="https://waze.com/ul?q=Le+White+Neuilly+sur+Marne" target="_blank" class="btn-mini">Itinéraire Waze</a>
                     <button onclick="handleCalendar('Houppa', '20260512T173000', '20260513T040000', 'Le White, Neuilly sur Marne')" class="btn-mini">Ajouter au calendrier</button>
                 </div>
             </div>
-
             <div class="memorial-card">
-                <p>
-                    Une pensée très émue pour nos grands-parents<br>
-                    <strong>Roger Benoun Levy, Michel Soulat</strong>,<br>
-                    <strong>Claude Nessim Msika</strong>,<br>
-                    <strong>Thérèse Esther, Jacques Isaac Uzan</strong><br>
-                    qui nous manqueront tant en ce jour unique.<br><br>
-                    Que leurs bénédictions illuminent notre vie.
-                </p>
+                <p>Une pensée émue pour nos grands-parents... Que leurs bénédictions illuminent notre vie.</p>
             </div>
         </div>
 
-        <img src="verre.JPG" alt="Célébration" class="section-photo">
-
         <div class="wedding-card" id="rsvp">
-            <h2 class="section-title" style="text-align: center; font-size: 1.6rem;">Confirmation</h2>
+            <h2 class="section-title" style="text-align: center; font-size: 1.5rem; margin-bottom: 5px;">Confirmation</h2>
+            <p style="text-align: center; color: var(--rose-clair); font-family: 'Montserrat', sans-serif; font-size: 0.7rem; text-transform: uppercase; letter-spacing: 3px; margin-bottom: 25px; font-weight: 400; opacity: 0.8;">
+                Réponse souhaitée avant le 1er Avril
+            </p>
             <form id="rsvpForm">
-                <input type="text" name="nom" required placeholder="Nom & Prénom" style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
-
-                <select name="pres_m" id="pres_m" onchange="toggleM()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
-                    <option value="" disabled selected>Présence Mairie & Vin d'honneur ?</option>
+                <input type="text" name="nom" required placeholder="Nom & Prénom" style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd;">
+                <select name="pres_m" id="pres_m" onchange="toggleM()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd;">
+                    <option value="" disabled selected>Présence Mairie ?</option>
                     <option value="oui">OUI</option>
                     <option value="non">NON</option>
                 </select>
                 <div id="sec_m" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <input type="number" name="ad_m" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
                 </div>
-
-                <select name="pres_h" id="pres_h" onchange="toggleH()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd; font-family: inherit;">
-                    <option value="" disabled selected>Présence Houppa & Soirée ?</option>
+                <select name="pres_h" id="pres_h" onchange="toggleH()" required style="margin-bottom:15px; width:100%; padding:12px; border:1px solid #ddd;">
+                    <option value="" disabled selected>Présence Houppa ?</option>
                     <option value="oui">OUI</option>
                     <option value="non">NON</option>
                 </select>
                 <div id="sec_h" style="display:none; margin-bottom: 15px; background: #fdfaf6; padding: 10px;">
                     <input type="number" name="ad_h" min="1" value="1" placeholder="Nombre d'adultes" style="width:100%; padding:10px; border:1px solid #ddd;">
                 </div>
-
-                <button type="submit" id="subBtn" class="btn-action">Envoyer ma réponse</button>
+                <button type="submit" class="btn-action">Envoyer ma réponse</button>
             </form>
         </div>
     </div>
@@ -222,35 +182,18 @@
     function handleCalendar(type, start, end, loc) {
         const title = "Mariage Eva & Samuel - " + type;
         const isIOS = /iPhone|iPad|iPod/.test(navigator.userAgent);
-
         if (isIOS) {
-            const icsData = [
-                "BEGIN:VCALENDAR",
-                "VERSION:2.0",
-                "BEGIN:VEVENT",
-                "DTSTART:" + start,
-                "DTEND:" + end,
-                "SUMMARY:" + title,
-                "LOCATION:" + loc,
-                "END:VEVENT",
-                "END:VCALENDAR"
-            ].join("\r\n");
-
+            const icsData = ["BEGIN:VCALENDAR","VERSION:2.0","BEGIN:VEVENT","DTSTART:"+start,"DTEND:"+end,"SUMMARY:"+title,"LOCATION:"+loc,"END:VEVENT","END:VCALENDAR"].join("\r\n");
             const blob = new Blob([icsData], { type: "text/calendar;charset=utf-8" });
             const link = document.createElement("a");
             link.href = window.URL.createObjectURL(blob);
             link.setAttribute("download", title + ".ics");
-            document.body.appendChild(link);
             link.click();
-            document.body.removeChild(link);
         } else {
-            const gStart = start + "Z"; 
-            const gEnd = end + "Z";
-            const gUrl = `https://www.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&dates=${gStart}/${gEnd}&location=${encodeURIComponent(loc)}`;
+            const gUrl = `https://www.google.com/calendar/render?action=TEMPLATE&text=${encodeURIComponent(title)}&dates=${start}Z/${end}Z&location=${encodeURIComponent(loc)}`;
             window.open(gUrl, '_blank');
         }
     }
 </script>
-
 </body>
 </html>
